More test fixes; code compiles again